--- a/.github/workflows/WithoutSS.yml
+++ b/.github/workflows/WithoutSS.yml
@@ -56,8 +56,8 @@ jobs:
 
     - name: Clone source code
       env: 
-        REPO_URL: https://github.com/coolsnowwolf/lede
-        REPO_BRANCH: master
+        REPO_URL: https://github.com/coolsnowwolf/openwrt
+        REPO_BRANCH: lede-17.01
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
     - name: Clone extra luci source code
