--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,26 +1,45 @@
 #=================================================
+# https://github.com/P3TERX/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
 # Author: P3TERX
-# Blog: https://p3terx.com for k2
+# Blog: https://p3terx.com
 #=================================================
 
 name: Build OpenWrt
 
-on: 
+on:
+  repository_dispatch:
   release:
-    types: [published]
+    types: published
   push:
-    branches: 
+    branches:
       - master
-  schedule:
-    - cron: 0 8 * * 5
-  watch:
-    types: [started]
+    paths:
+      - '.config'
+#  schedule:
+#    - cron: 0 8 * * 5
+#  watch:
+#    types: started
+
+env:
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
+  FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: .config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: false
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: false
+  TZ: Asia/Shanghai
 
 jobs:
   build:
     runs-on: ubuntu-18.04
+    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - name: Checkout
@@ -30,44 +49,29 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        docker rmi `docker images -q`
-        echo "Deleting files, please wait ..."
-        sudo rm -rf \
-          /usr/share/dotnet \
-          /etc/mysql \
-          /etc/php
-        sudo -E apt-get -y purge \
-          azure-cli \
-          ghc* \
-          zulu* \
-          hhvm \
-          llvm* \
-          firefox \
-          google* \
-          dotnet* \
-          powershell \
-          openjdk* \
-          mysql* \
-          php*
-        sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get clean
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
 
     - name: Clone source code
-      env: 
-        REPO_URL: https://github.com/coolsnowwolf/lede
-        REPO_BRANCH: master
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-
-    - name: Clone extra luci source code
+      working-directory: /workdir
       run: |
-        git clone https://github.com/honwen/luci-app-aliddns openwrt/package/luci-app-aliddns
-        git clone https://github.com/zxlhhyccc/luci-app-serverchan openwrt/package/luci-app-serverchan
-        git clone https://github.com/Kinodi/luci-theme-atmaterial openwrt/package/luci-theme-atmaterial
-        git clone https://github.com/jerrykuku/luci-theme-argon openwrt/package/luci-theme-argon
-        git clone https://github.com/Lienol/openwrt-package openwrt/package/openwrt-package
-        git clone https://github.com/maxlicheng/luci-app-ssr-plus openwrt/package/luci-app-ssr-plus
+        df -hT $PWD
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+
+    - name: Load custom feeds
+      run: |
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        chmod +x $DIY_P1_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P1_SH
+
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -77,282 +81,72 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x $DIY_P2_SH
         cd openwrt
-        rm -f ./.config*
-        touch ./.config
-        #
-        # ========================固件定制部分========================
-        # 
-        # 
-        # 如果不对本区块做出任何编辑, 则生成默认配置固件. 
-        # 
-        # 以下为定制化固件选项和说明:
-        #
-        #
-        # 有些插件/选项是默认开启的, 如果想要关闭, 请参照以下示例进行编写:
-        # 
-        #          =========================================
-        #         |  # 取消编译VMware镜像:                   |
-        #         |  cat >> .config <<EOF                   |
-        #         |  # CONFIG_VMDK_IMAGES is not set        |
-        #         |  EOF                                    |
-        #          =========================================
-        #
-        # 
-        # 以下是一些提前准备好的一些插件选项.
-        # 直接取消注释相应代码块即可应用. 不要取消注释代码块上的汉字说明.
-        # 如果不需要代码块里的某一项配置, 只需要删除相应行.
-        #
-        # 如果需要其他插件, 请按照示例自行添加.
-        # 注意, 只需添加依赖链顶端的包. 如果你需要插件 A, 同时 A 依赖 B, 即只需要添加 A.
-        # 
-        # 无论你想要对固件进行怎样的定制, 都需要且只需要修改 EOF 回环内的内容.
-        # 
-        # 编译phicomm k2固件:
-        cat >> .config <<EOF
-        CONFIG_TARGET_ramips=y
-        CONFIG_TARGET_ramips_mt7620=y
-        CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
-        # CONFIG_TARGET_x86 is not set
-        # CONFIG_TARGET_x86_64 is not set
-        # CONFIG_TARGET_x86_64_Generic is not set
-        EOF
-        # 固件压缩:
-        # cat >> .config <<EOF
-        # CONFIG_TARGET_IMAGES_GZIP=y
-        # EOF
-        # 编译UEFI固件:
-        # cat >> .config <<EOF
-        # CONFIG_EFI_IMAGES=y
-        # EOF
-        # IPv6支持:
-        # cat >> .config <<EOF
-        # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-        # CONFIG_PACKAGE_ipv6helper=y
-        # EOF
-        # 多文件系统支持:
-        # cat >> .config <<EOF
-        # CONFIG_PACKAGE_kmod-fs-nfs=y
-        # CONFIG_PACKAGE_kmod-fs-nfs-common=y
-        # CONFIG_PACKAGE_kmod-fs-nfs-v3=y
-        # CONFIG_PACKAGE_kmod-fs-nfs-v4=y
-        # CONFIG_PACKAGE_kmod-fs-ntfs=y
-        # CONFIG_PACKAGE_kmod-fs-squashfs=y
-        # EOF
-        # USB3.0支持:
-        # cat >> .config <<EOF
-        # CONFIG_PACKAGE_kmod-usb-ohci=y
-        # CONFIG_PACKAGE_kmod-usb-ohci-pci=y
-        # CONFIG_PACKAGE_kmod-usb2=y
-        # CONFIG_PACKAGE_kmod-usb2-pci=y
-        # CONFIG_PACKAGE_kmod-usb3=y
-        # EOF
-        # 常用LuCI插件选择:
-        cat >> .config <<EOF
-        # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-        # CONFIG_PACKAGE_luci-app-acme is not set
-        # CONFIG_PACKAGE_luci-app-adblock is not set
-        # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-        # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
-        # CONFIG_PACKAGE_luci-app-ahcp is not set
-        # CONFIG_PACKAGE_luci-app-aliddns is not set
-        # CONFIG_PACKAGE_luci-app-amule is not set
-        # CONFIG_PACKAGE_luci-app-aria2 is not set
-        CONFIG_PACKAGE_luci-app-arpbind=y
-        # CONFIG_PACKAGE_luci-app-asterisk is not set
-        # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
-        # CONFIG_PACKAGE_luci-app-autoreboot=y
-        # CONFIG_PACKAGE_luci-app-baidupcs-web is not set
-        # CONFIG_PACKAGE_luci-app-bcp38 is not set
-        # CONFIG_PACKAGE_luci-app-bird1-ipv4 is not set
-        # CONFIG_PACKAGE_luci-app-bird1-ipv6 is not set
-        # CONFIG_PACKAGE_luci-app-bmx6 is not set
-        # CONFIG_PACKAGE_luci-app-bmx7 is not set
-        # CONFIG_PACKAGE_luci-app-brook-server is not set
-        # CONFIG_PACKAGE_luci-app-cifsd is not set
-        # CONFIG_PACKAGE_luci-app-cjdns is not set
-        # CONFIG_PACKAGE_luci-app-clamav is not set
-        # CONFIG_PACKAGE_luci-app-commands is not set
-        # CONFIG_PACKAGE_luci-app-control-mia is not set
-        # CONFIG_PACKAGE_luci-app-control-timewol is not set
-        # CONFIG_PACKAGE_luci-app-control-webrestriction is not set
-        # CONFIG_PACKAGE_luci-app-control-weburl is not set
-        # CONFIG_PACKAGE_luci-app-cshark is not set
-        # CONFIG_PACKAGE_luci-app-ddns is not set
-        # CONFIG_PACKAGE_luci-app-diag-core is not set
-        # CONFIG_PACKAGE_luci-app-dnscrypt-proxy is not set
-        # CONFIG_PACKAGE_luci-app-dnsforwarder is not set
-        # CONFIG_PACKAGE_luci-app-dnspod is not set
-        # CONFIG_PACKAGE_luci-app-dump1090 is not set
-        # CONFIG_PACKAGE_luci-app-dynapoint is not set
-        # CONFIG_PACKAGE_luci-app-e2guardian is not set
-        # CONFIG_PACKAGE_luci-app-familycloud is not set
-        # CONFIG_PACKAGE_luci-app-fileassistant is not set
-        # CONFIG_PACKAGE_luci-app-filebrowser is not set
-        # CONFIG_PACKAGE_luci-app-filetransfer is not set
-        CONFIG_PACKAGE_luci-app-firewall=y
-        CONFIG_PACKAGE_luci-app-flowoffload=y
-        # CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
-        # CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
-        # CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
-        # CONFIG_PACKAGE_luci-app-frpc is not set
-        # CONFIG_PACKAGE_luci-app-fwknopd is not set
-        # CONFIG_PACKAGE_luci-app-guest-wifi is not set
-        # CONFIG_PACKAGE_luci-app-haproxy-tcp is not set
-        # CONFIG_PACKAGE_luci-app-hd-idle is not set
-        # CONFIG_PACKAGE_luci-app-hnet is not set
-        # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-        # CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers is not set
-        # CONFIG_PACKAGE_luci-app-kcptun is not set
-        # CONFIG_PACKAGE_luci-app-kodexplorer is not set
-        # CONFIG_PACKAGE_luci-app-koolproxyR is not set
-        # CONFIG_PACKAGE_luci-app-lxc is not set
-        # CONFIG_PACKAGE_luci-app-meshwizard is not set
-        # CONFIG_PACKAGE_luci-app-minidlna is not set
-        # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-        # CONFIG_PACKAGE_luci-app-mtwifi is not set
-        # CONFIG_PACKAGE_luci-app-mwan3 is not set
-        # CONFIG_PACKAGE_luci-app-mwan3helper is not set
-        # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
-        # CONFIG_PACKAGE_luci-app-netdata is not set
-        # CONFIG_PACKAGE_luci-app-nft-qos is not set
-        # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-        # CONFIG_PACKAGE_luci-app-noddos is not set
-        # CONFIG_PACKAGE_luci-app-nps is not set
-        # CONFIG_PACKAGE_luci-app-ntpc is not set
-        # CONFIG_PACKAGE_luci-app-ocserv is not set
-        # CONFIG_PACKAGE_luci-app-olsr is not set
-        # CONFIG_PACKAGE_luci-app-olsr-services is not set
-        # CONFIG_PACKAGE_luci-app-olsr-viz is not set
-        # CONFIG_PACKAGE_luci-app-openvpn is not set
-        # CONFIG_PACKAGE_luci-app-openvpn-server is not set
-        # CONFIG_PACKAGE_luci-app-p910nd is not set
-        # CONFIG_PACKAGE_luci-app-pagekitec is not set
-        # CONFIG_PACKAGE_luci-app-passwall=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_socks=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_socks=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin is not set
-        # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs is not set
-        # CONFIG_PACKAGE_luci-app-polipo is not set
-        # CONFIG_PACKAGE_luci-app-pppoe-relay is not set
-        # CONFIG_PACKAGE_luci-app-pppoe-server is not set
-        # CONFIG_PACKAGE_luci-app-pptp-server is not set
-        # CONFIG_PACKAGE_luci-app-pptp-vpnserver-manyusers is not set
-        # CONFIG_PACKAGE_luci-app-privoxy is not set
-        # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-        # CONFIG_PACKAGE_luci-app-qos is not set
-        # CONFIG_PACKAGE_luci-app-radicale is not set
-        # CONFIG_PACKAGE_luci-app-ramfree is not set
-        # CONFIG_PACKAGE_luci-app-rp-pppoe-server is not set
-        # CONFIG_PACKAGE_luci-app-samba is not set
-        # CONFIG_PACKAGE_luci-app-samba4 is not set
-        # CONFIG_PACKAGE_luci-app-serverchan is not set
-        # CONFIG_PACKAGE_luci-app-shadowsocks-libev is not set
-        # CONFIG_PACKAGE_luci-app-shairplay is not set
-        # CONFIG_PACKAGE_luci-app-siitwizard is not set
-        # CONFIG_PACKAGE_luci-app-simple-adblock is not set
-        # CONFIG_PACKAGE_luci-app-smartdns=y
-        # CONFIG_PACKAGE_luci-app-softethervpn is not set
-        # CONFIG_PACKAGE_luci-app-splash is not set
-        # CONFIG_PACKAGE_luci-app-sqm is not set
-        # CONFIG_PACKAGE_luci-app-squid is not set
-        # CONFIG_PACKAGE_luci-app-ssr-libev-server is not set
-         CONFIG_PACKAGE_luci-app-ssr-plus=y
-         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-        # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray is not set
-        # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan is not set
-        # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
-        # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
-         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
-        # CONFIG_PACKAGE_luci-app-ssr-python-pro-server is not set
-        # CONFIG_PACKAGE_luci-app-ssrserver-python is not set
-        # CONFIG_PACKAGE_luci-app-statistics is not set
-        # CONFIG_PACKAGE_luci-app-syncdial=y
-        # CONFIG_PACKAGE_luci-app-syncthing is not set
-        # CONFIG_PACKAGE_luci-app-tinyproxy is not set
-        # CONFIG_PACKAGE_luci-app-transmission is not set
-        # CONFIG_PACKAGE_luci-app-travelmate is not set
-        # CONFIG_PACKAGE_luci-app-trojan-server is not set
-        # CONFIG_PACKAGE_luci-app-ttyd is not set
-        # CONFIG_PACKAGE_luci-app-udpxy is not set
-        # CONFIG_PACKAGE_luci-app-uhttpd is not set
-        # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-        # CONFIG_PACKAGE_luci-app-unbound is not set
-        # CONFIG_PACKAGE_luci-app-upnp=y
-        # CONFIG_PACKAGE_luci-app-usb-printer is not set
-        # CONFIG_PACKAGE_luci-app-v2ray-server is not set
-        # CONFIG_PACKAGE_luci-app-verysync is not set
-        # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-        # CONFIG_PACKAGE_luci-app-vnstat is not set
-        # CONFIG_PACKAGE_luci-app-vpnbypass is not set
-        # CONFIG_PACKAGE_luci-app-vsftpd is not set
-        # CONFIG_PACKAGE_luci-app-watchcat is not set
-        # CONFIG_PACKAGE_luci-app-webadmin is not set
-        # CONFIG_PACKAGE_luci-app-wifischedule is not set
-        # CONFIG_PACKAGE_luci-app-wireguard is not set
-        # CONFIG_PACKAGE_luci-app-wol is not set
-        # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
-        # CONFIG_PACKAGE_luci-app-xlnetacc is not set
-        # CONFIG_PACKAGE_luci-app-zerotier is not set
-        EOF
-        # LuCI主题:
-        cat >> .config <<EOF
-         CONFIG_PACKAGE_luci-theme-argon=y
-        # CONFIG_PACKAGE_luci-theme-netgear=y
-        EOF
-        # 常用软件包:
-        # cat >> .config <<EOF
-        # CONFIG_PACKAGE_curl=y
-        # CONFIG_PACKAGE_htop=y
-        # CONFIG_PACKAGE_nano=y
-        # CONFIG_PACKAGE_screen=y
-        # CONFIG_PACKAGE_tree=y
-        # CONFIG_PACKAGE_vim-fuller=y
-        # CONFIG_PACKAGE_wget=y
-        # EOF
-        # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-        # cat >> .config <<EOF
-        # # CONFIG_TARGET_IMAGES_PAD is not set
-        # # CONFIG_VMDK_IMAGES is not set
-        # EOF
-        # 
-        # ========================固件定制部分结束========================
-        # 
-        sed -i 's/^[ \t]*//g' ./.config
-        make defconfig
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+
+    - name: SSH connection to Actions
+      uses: P3TERX/debugger-action@master
+      if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
     - name: Download package
+      id: package
       run: |
-        cd openwrt && make download -j8
+        cd openwrt
+        make defconfig
+        make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Build
+    - name: Compile the firmware
+      id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread build."
-        make -j$(nproc) V=s
+        echo -e "$(nproc) thread compile"
+        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo "::set-output name=status::success"
+        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "::set-env name=DEVICE_NAME::_$(cat DEVICE_NAME)"
+        echo "::set-env name=FILE_DATE::_$(date +"%Y%m%d%H%M")"
 
-    - name: Assemble artifact
-      run: |
-        cd openwrt
-        rm -rf ./artifact/
-        mkdir -p ./artifact/
-        find ./bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-        find ./bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
-        
-    - name: Upload artifact
+    - name: Check space usage
+      if: (!cancelled())
+      run: df -hT
+
+    - name: Upload bin directory
       uses: actions/upload-artifact@master
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt phicomm k2
-        path: ./openwrt/artifact/
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/bin
 
+    - name: Organize files
+      id: organize
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      run: |
+        cd openwrt/bin/targets/*/*
+        rm -rf packages
+        echo "::set-env name=FIRMWARE::$PWD"
+        echo "::set-output name=status::success"
+
+    - name: Upload firmware directory
+      uses: actions/upload-artifact@master
+      if: steps.organize.outputs.status == 'success' && !cancelled()
+      with:
+        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: ${{ env.FIRMWARE }}
+
+    - name: Upload firmware to cowtransfer
+      if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
+        echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
+
+    - name: Upload firmware to WeTransfer
+      if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
+        echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
