--- a/.github/workflows/WithoutSS.yml
+++ b/.github/workflows/WithoutSS.yml
@@ -2,25 +2,44 @@
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
 # Author: P3TERX
+# 4.4内核固件生成
 # Blog: https://p3terx.com for k2
 #=================================================
 
-name: Build OpenWrt WithoutSS
+name: Build OpenWrt lede 4.4 customized
 
-on: 
+on:
+  repository_dispatch:
   release:
-    types: [published]
+    types: published
   push:
-    branches: 
+    branches:
       - master
+    paths:
+      - '.config'
   schedule:
     - cron: 0 8 * * 5
   watch:
-    types: [started]
+    types: started
+
+env:
+  REPO_URL: https://github.com/coolsnowwolf/openwrt
+  REPO_BRANCH: lede-17.01
+  FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: .config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: false
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: false
+  TZ: Asia/Shanghai
 
 jobs:
   build:
     runs-on: ubuntu-18.04
+    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - name: Checkout
@@ -30,36 +49,20 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        docker rmi `docker images -q`
-        echo "Deleting files, please wait ..."
-        sudo rm -rf \
-          /usr/share/dotnet \
-          /etc/mysql \
-          /etc/php
-        sudo -E apt-get -y purge \
-          azure-cli \
-          ghc* \
-          zulu* \
-          hhvm \
-          llvm* \
-          firefox \
-          google* \
-          dotnet* \
-          powershell \
-          openjdk* \
-          mysql* \
-          php*
-        sudo -E apt-get update
-        sudo -E apt-get -y install $(curl -fsSL git.io/depends-ubuntu-1804)
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get clean
-
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
     - name: Clone source code
-      env: 
-        REPO_URL: https://github.com/coolsnowwolf/openwrt
-        REPO_BRANCH: lede-17.01
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-
+      working-directory: /workdir
+      run: |
+        df -hT $PWD
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
     - name: Clone extra luci source code
       run: |
         git clone https://github.com/honwen/luci-app-aliddns openwrt/package/luci-app-aliddns
@@ -68,6 +71,12 @@ jobs:
         git clone https://github.com/jerrykuku/luci-theme-argon openwrt/package/luci-theme-argon
         git clone https://github.com/Lienol/openwrt-package openwrt/package/openwrt-package
         # git clone -b lede https://github.com/pymumu/luci-app-smartdns openwrt/package/luci-app-smartdns
+    - name: Load custom feeds
+      run: |
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        chmod +x $DIY_P1_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P1_SH
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -77,7 +86,6 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
-        cd openwrt
         rm -f ./.config*
         touch ./.config
         #
@@ -126,10 +134,10 @@ jobs:
         # CONFIG_EFI_IMAGES=y
         # EOF
         # IPv6支持:
-        # cat >> .config <<EOF
-        # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-        # CONFIG_PACKAGE_ipv6helper=y
-        # EOF
+        cat >> .config <<EOF
+        CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+        CONFIG_PACKAGE_ipv6helper=y
+        EOF
         # 多文件系统支持:
         # cat >> .config <<EOF
         # CONFIG_PACKAGE_kmod-fs-nfs=y
@@ -229,7 +237,6 @@ jobs:
         # CONFIG_PACKAGE_luci-app-p910nd is not set
         # CONFIG_PACKAGE_luci-app-pagekitec is not set
         # CONFIG_PACKAGE_luci-app-passwall is not set
-
         #
         # Configuration
         #
@@ -301,7 +308,7 @@ jobs:
         # CONFIG_PACKAGE_luci-app-vsftpd is not set
         # CONFIG_PACKAGE_luci-app-watchcat is not set
         # CONFIG_PACKAGE_luci-app-webadmin is not set
-        # CONFIG_PACKAGE_luci-app-wifischedule is not set
+        CONFIG_PACKAGE_luci-app-wifischedule is not set
         # CONFIG_PACKAGE_luci-app-wireguard is not set
         # CONFIG_PACKAGE_luci-app-wol is not set
         # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
@@ -309,10 +316,10 @@ jobs:
         # CONFIG_PACKAGE_luci-app-zerotier is not set
         EOF
         # LuCI主题:
-        cat >> .config <<EOF
-         CONFIG_PACKAGE_luci-theme-argon=y
+        # cat >> .config <<EOF
+        # CONFIG_PACKAGE_luci-theme-argon=y
         # CONFIG_PACKAGE_luci-theme-netgear=y
-        EOF
+        # EOF
         # 常用软件包:
         # cat >> .config <<EOF
         # CONFIG_PACKAGE_curl=y
@@ -332,31 +339,67 @@ jobs:
         # ========================固件定制部分结束========================
         # 
         sed -i 's/^[ \t]*//g' ./.config
-        make defconfig
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x $DIY_P2_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+    - name: SSH connection to Actions
+      uses: P3TERX/debugger-action@master
+      if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
     - name: Download package
+      id: package
       run: |
-        cd openwrt && make download -j8
+        cd openwrt
+        make defconfig
+        make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-
-    - name: Build
+    - name: Compile the firmware
+      id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread build."
-        make -j$(nproc) V=s
+        echo -e "$(nproc) thread compile"
+        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo "::set-output name=status::success"
+        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "::set-env name=DEVICE_NAME::_$(cat DEVICE_NAME)"
+        echo "::set-env name=FILE_DATE::_$(date +"%Y%m%d%H%M")"
+    - name: Check space usage
+      if: (!cancelled())
+      run: df -hT
 
-    - name: Assemble artifact
-      run: |
-        cd openwrt
-        rm -rf ./artifact/
-        mkdir -p ./artifact/
-        find ./bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-        find ./bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
-        
-    - name: Upload artifact
+    - name: Upload bin directory
       uses: actions/upload-artifact@master
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt phicomm k2 withoutSS
-        path: ./openwrt/artifact/
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/bin
 
+    - name: Organize files
+      id: organize
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      run: |
+        cd openwrt/bin/targets/*/*
+        rm -rf packages
+        echo "::set-env name=FIRMWARE::$PWD"
+        echo "::set-output name=status::success"
+    - name: Upload firmware directory
+      uses: actions/upload-artifact@master
+      if: steps.organize.outputs.status == 'success' && !cancelled()
+      with:
+        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: ${{ env.FIRMWARE }}
+
+#    - name: Upload firmware to cowtransfer
+#      if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
+#      run: |
+#        curl -fsSL git.io/file-transfer | sh
+#        ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
+#        echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
+#    - name: Upload firmware to WeTransfer
+#      if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
+#      run: |
+#        curl -fsSL git.io/file-transfer | sh
+#        ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
+#        echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
