--- a/.github/workflows/build-openwrt-customized.yml
+++ b/.github/workflows/build-openwrt-customized.yml
@@ -30,7 +30,7 @@ env:
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
-  UPLOAD_BIN_DIR: false
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
@@ -328,6 +328,8 @@ jobs:
         # CONFIG_PACKAGE_screen=y
         # CONFIG_PACKAGE_tree=y
         # CONFIG_PACKAGE_vim-fuller=y
+        CONFIG_DEFAULT_opkg=n
+        CONFIG_PACKAGE_opkg=n
         CONFIG_PACKAGE_wget=y
         EOF
         # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
