--- a/.github/workflows/build-openwrt-customized.yml
+++ b/.github/workflows/build-openwrt-customized.yml
@@ -314,6 +314,8 @@ jobs:
         # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
         # CONFIG_PACKAGE_luci-app-xlnetacc is not set
         # CONFIG_PACKAGE_luci-app-zerotier is not set
+        CONFIG_PACKAGE_luci-app-ssr-plus=n
+        CONFIG_PACKAGE_shadowsocksr-libev-alt=n
         EOF
         # LuCI主题:
         # cat >> .config <<EOF
