--- a/.github/workflows/build-openwrt-customized.yml
+++ b/.github/workflows/build-openwrt-customized.yml
@@ -308,7 +308,7 @@ jobs:
         # CONFIG_PACKAGE_luci-app-vsftpd is not set
         # CONFIG_PACKAGE_luci-app-watchcat is not set
         # CONFIG_PACKAGE_luci-app-webadmin is not set
-        CONFIG_PACKAGE_luci-app-wifischedule is not set
+        CONFIG_PACKAGE_luci-app-wifischedule=y
         # CONFIG_PACKAGE_luci-app-wireguard is not set
         # CONFIG_PACKAGE_luci-app-wol is not set
         # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
