--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -125,6 +125,11 @@ jobs:
         # CONFIG_TARGET_x86_64 is not set
         # CONFIG_TARGET_x86_64_Generic is not set
         EOF
+        # IPv6支持:
+        cat >> .config <<EOF
+        CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+        CONFIG_PACKAGE_ipv6helper=y
+        EOF
         # 常用LuCI插件选择:
         cat >> .config <<EOF
         # CONFIG_PACKAGE_luci-app-accesscontrol is not set
@@ -283,6 +288,8 @@ jobs:
         # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
         # CONFIG_PACKAGE_luci-app-xlnetacc is not set
         # CONFIG_PACKAGE_luci-app-zerotier is not set
+        CONFIG_PACKAGE_luci-app-ssr-plus=n
+        CONFIG_PACKAGE_shadowsocksr-libev-alt=n
         EOF
         # 常用软件包:
         # cat >> .config <<EOF
@@ -352,7 +359,7 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_firmware_purity${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: Upload firmware to cowtransfer
