--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -174,7 +174,8 @@ jobs:
         # CONFIG_PACKAGE_luci-app-filebrowser is not set
         # CONFIG_PACKAGE_luci-app-filetransfer is not set
         CONFIG_PACKAGE_luci-app-firewall=y
-        CONFIG_PACKAGE_luci-app-flowoffload=y
+        # CONFIG_PACKAGE_luci-app-flowoffload is not set
+        CONFIG_PACKAGE_luci-app-sfe=y
         # CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
         # CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
         # CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
