--- a/.github/workflows/build-openwrt-k1.yml
+++ b/.github/workflows/build-openwrt-k1.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com for k1
 #=================================================
 
-name: Build OpenWrt lede 4.4 customized
+name: Build OpenWrt lede 4.4 customized for k1
 
 on:
   repository_dispatch:
