--- a/.github/workflows/build-openwrt-5.4-k1.yml
+++ b/.github/workflows/build-openwrt-5.4-k1.yml
@@ -220,8 +220,8 @@ jobs:
         # CONFIG_PACKAGE_luci-app-minidlna is not set
         # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
         # CONFIG_PACKAGE_luci-app-mtwifi is not set
-        # CONFIG_PACKAGE_luci-app-mwan3 is not set
-        # CONFIG_PACKAGE_luci-app-mwan3helper is not set
+        CONFIG_PACKAGE_luci-app-mwan3=y
+        CONFIG_PACKAGE_luci-app-mwan3helper=y
         # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
         # CONFIG_PACKAGE_luci-app-netdata is not set
         # CONFIG_PACKAGE_luci-app-nft-qos is not set
@@ -288,14 +288,14 @@ jobs:
         # CONFIG_PACKAGE_luci-app-ssr-python-pro-server is not set
         # CONFIG_PACKAGE_luci-app-ssrserver-python is not set
         # CONFIG_PACKAGE_luci-app-statistics is not set
-        # CONFIG_PACKAGE_luci-app-syncdial=y
+        CONFIG_PACKAGE_luci-app-syncdial=y
         # CONFIG_PACKAGE_luci-app-syncthing is not set
         # CONFIG_PACKAGE_luci-app-tinyproxy is not set
         # CONFIG_PACKAGE_luci-app-transmission is not set
         # CONFIG_PACKAGE_luci-app-travelmate is not set
         # CONFIG_PACKAGE_luci-app-trojan-server is not set
         # CONFIG_PACKAGE_luci-app-ttyd is not set
-        # CONFIG_PACKAGE_luci-app-udpxy is not set
+        CONFIG_PACKAGE_luci-app-udpxy=y
         # CONFIG_PACKAGE_luci-app-uhttpd is not set
         # CONFIG_PACKAGE_luci-app-unblockmusic is not set
         # CONFIG_PACKAGE_luci-app-unbound is not set
