--- a/.github/workflows/build-openwrt-5.4-k2.yml
+++ b/.github/workflows/build-openwrt-5.4-k2.yml
@@ -332,6 +332,9 @@ jobs:
         # CONFIG_PACKAGE_tree=y
         # CONFIG_PACKAGE_vim-fuller=y
         # CONFIG_PACKAGE_wget=y
+        # CONFIG_v2ray-plugin_INCLUDE_GOPROXY is not set
+        # CONFIG_XRAY_CORE_COMPRESS_GOPROXY is not set
+        # CONFIG_UnblockNeteaseMusicGo_INCLUDE_GOPROXY
         EOF
         # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
         # cat >> .config <<EOF
